@@ -1,5 +1,6 @@
 0.92
 
+* Event->render() has been changed so $options is an optional argument.
 * Enabled iBox support in the plugin.
 * Refactored some image handling out of the Flickr class and into base class.
 * Fixed a bug with SimplePie not retrieving the full image from Flickr.
